# space-pkl

./: .gitignore  Cargo.toml  DEPRECATION_IMPLEMENTATION.md  LICENSE  LICENSE.md  README.md  TODO.md  demo-deprecation.sh  doc-header.html  known_issues.md  moon.pkl
.github/workflows/: ci.yml  pkl-version-management.yml  release.yml
.schema/: Project.pkl
docs/: reference_resolution.md
examples/: basic_usage.rs  project.yml  reference_resolution_test.rs  template.yml  toolchain.yml  workspace.yml
old_tests/: deprecation_test.rs
old_tests/pkl/examples/: project_examples_test.pkl  workspace_examples_test.pkl  workspace_examples_test.pkl-expected.pcf
old_tests/pkl/integration/: error_handling_test.pkl  schema_interop_test.pkl  schema_interop_test.pkl-expected.pcf
old_tests/pkl/schema_validation/: basic_parsing_test.pkl  import_relationships_test.pkl
old_tests/pkl/type_tests/: type_aliases_test.pkl
pkl-schemas/: mod.pkl  project.pkl  tasks.pkl  template.pkl  toolchain.pkl  workspace.pkl
pkl-schemas-with-deprecated/: project.pkl
pkl-schemas-without-deprecated/: project.pkl
scripts/: demo-deprecation.sh  dev-bootstrap.sh  install-pkl-version.sh  run-pkl-tests.sh  test-real-configs.sh  update-pkl-version.sh
src/: _rewrite.bak  cli_app.rs  config.rs  config_processor.rs  constants.rs  error.rs  generator.rs  lib.rs  main.rs  new_renderer.rs  pkl_renderer.rs  pkl_tooling.rs  templates.rs  types.rs  utils.rs
src/commands/: convert.rs  generate.rs  install.rs  mod.rs  pklme.rs
src/types/: cli.rs  error.rs  formats.rs  mod.rs  moon.rs  pkl.rs
test-output/: mod.pkl  project.pkl  tasks.pkl  template.pkl  toolchain.pkl  workspace.pkl
test_output/: test_report.md
tests/: debug_test.rs  deprecation_test.rs  integration_tests.rs  pkl_integration_tests.rs  rustdoc_links_test.rs  test_regex_patterns.rs
tests/pkl/examples/: project_examples_test.pkl  project_examples_test.pkl-expected.pcf  workspace_examples_test.pkl
tests/pkl/integration/: error_handling_test.pkl  schema_interop_test.pkl
tests/pkl/schema_validation/: basic_parsing_test.pkl  import_relationships_test.pkl
tests/pkl/type_tests/: project_constraints_test.pkl  type_aliases_test.pkl  type_aliases_test.pkl-expected.pcf
